<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/card"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_add_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/btnAdd">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_ip"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:layout_marginEnd="5dp" />

            </android.support.design.widget.TextInputLayout>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnAdd"
                android:text="@string/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1"
            android:layout_marginBottom="10dp">

            <Spinner
                android:id="@+id/spinnerConnections"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/lblConnections"
                android:visibility="gone" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btn_del_description"
                app:fontAwesomeIcon="fa_times"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="true"
                app:roundedCorners="true"
                android:layout_marginEnd="5dp" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btn_go_description"
                app:fontAwesomeIcon="fa_chevron_right"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="true"
                app:roundedCorners="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1"
            android:layout_marginBottom="10dp">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnTest"
                android:layout_weight="1"
                android:text="test mode" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>