<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/card"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_edit_joystick_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/btnEditJoystickPower">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editJoystickPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_joystick_power"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!--<Button-->
                <!--android:id="@+id/btnEditJoystickPower"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/btn_edit"-->
                <!--android:layout_alignBottom="@+id/input_layout_edit_joystick_power"-->
                <!--android:layout_alignParentEnd="true" />-->

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnEditJoystickPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit"
                android:layout_alignBottom="@+id/input_layout_edit_joystick_power"
                android:layout_alignParentEnd="true"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/card"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_edit_joystick_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/btnEditJoystickDirection">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editJoystickDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_joystick_direction"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!--<Button-->
                <!--android:id="@+id/btnEditJoystickDirection"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/btn_edit"-->
                <!--android:layout_alignBottom="@+id/input_layout_edit_joystick_direction"-->
                <!--android:layout_alignParentEnd="true" />-->

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnEditJoystickDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit"
                android:layout_alignBottom="@+id/input_layout_edit_joystick_direction"
                android:layout_alignParentEnd="true"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>